tests/fixtures/invalid/pow_str_dict_none.py
# Cannot call pow() with Str, Dict[str, int], None
x = pow("hello", {"a": 1}, None)
